# RP2350-Remote-Display

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: firmware.yml  python.yml
docs/: README.md  protocol.md  releasing.md  testing.md  troubleshooting.md  windows-11.md
firmware/: CMakeLists.txt  LICENSE  NOTICE.md  README.md
firmware/LICENSES/: BSD-3-Clause-TLSF.txt
firmware/boards/: waveshare_rp2350_touch_amoled_2.41.h
firmware/drivers/psram/: rp_pico_alloc.c  rp_pico_alloc.h
firmware/drivers/waveshare/amoled/: AMOLED_2in41.c  AMOLED_2in41.h
firmware/drivers/waveshare/board/: DEV_Config.c  DEV_Config.h
firmware/drivers/waveshare/qspi/: qspi.pio  qspi_pio.c  qspi_pio.h
firmware/drivers/waveshare/touch/: FT6336U.c  FT6336U.h
firmware/firmware/: builtin_font.c  builtin_font.h  builtin_font_data.S.in  main.c  remote_protocol.c  remote_protocol.h  renderer.c  renderer.h  resource_cache.c  resource_cache.h  rtc_pcf85063.c  rtc_pcf85063.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
firmware/releases/: SHA256SUMS
firmware/scripts/: build.sh
firmware/tests/: builtin_font_asset_harness.c  renderer_copy_scroll_harness.c  rtc_pcf85063_harness.c  test_unifont_asset.py  usb_descriptors_harness.c
firmware/tests/mocks/: AMOLED_2in41.h  rp_pico_alloc.h  tusb.h
firmware/tests/mocks/hardware/: i2c.h
firmware/tests/mocks/pico/: stdlib.h  unique_id.h
firmware/tools/: generate_builtin_font.py
functional-test/: CHANGELOG.md  NOTICE.md  README.md  functional_test.py  run.ps1  run.sh
functional-test/scripts/: setup.ps1  setup.sh
python/: CHANGELOG.md  README.md  pyproject.toml
python/examples/: basic_primitives.py  device_text.py  dirty_dashboard.py  graphics_modes.py  layout_debug.py  plasma_interactive.py  resource_cache.py  rtc_sync.py  run_plasma_interactive.sh  run_rtc_sync.sh  scrolling_log.py  touch_canvas.py
python/scripts/: install_linux_udev_rule.sh  run_examples.sh  test.sh  uninstall_linux_udev_rule.sh
python/src/rp2350_remote_display/: __init__.py  canvas.py  dirty_tiles.py  display.py  layout.py  protocol.py  rtc.py
python/tests/: test_brightness.py  test_canvas.py  test_canvas_crc.py  test_copy_scroll.py  test_device_text.py  test_dirty_dashboard_example.py  test_dirty_dashboard_layout.py  test_dirty_tiles.py  test_display_recovery.py  test_functional_report.py  test_layout.py  test_ntp.py  test_palette4.py  test_palette64.py  test_plasma_interactive.py  test_protocol.py  test_public_api.py  test_release_metadata.py  test_resource_cache_protocol.py  test_rtc.py  test_scale2.py  test_session_protocol.py  test_tile_profiles.py
python/udev/: 60-rp2350-remote-display.rules
scripts/: bootstrap-linux.sh  build-flash-test.sh  build-python-wheel.sh  check-version-consistency.py  verify.sh
