[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rp2350-remote-display"
version = "1.2.18.dev0"
description = "Python host library for the RP2350 Remote Display USB protocol"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "RP2350 Remote Display contributors"}]
keywords = ["rp2350", "raspberry-pi-pico", "waveshare", "amoled", "usb", "display"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Pillow>=10.0.0",
  "pyusb>=1.2.1",
  "libusb-package>=1.0.30.0; sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[project.urls]
Homepage = "https://github.com/Charlie22911/RP2350-Remote-Display"
Documentation = "https://github.com/Charlie22911/RP2350-Remote-Display/tree/main/docs"
Repository = "https://github.com/Charlie22911/RP2350-Remote-Display.git"
Issues = "https://github.com/Charlie22911/RP2350-Remote-Display/issues"
Changelog = "https://github.com/Charlie22911/RP2350-Remote-Display/blob/main/python/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rp2350_remote_display = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
